# SymbolicP

./: .gitmodules
playground/: example.p
playground/elevator/: MachineDoor.cs  MachineElevator.cs  MachineStarter.cs  MachineTimer.cs  MachineUser.cs  PMachine.cs  Scheduler.cs  SendQueueItem.cs  common_Macros.h  elevator_Macros.h  run.exe.mdb
playground/pingpong/: Dispatcher.cs  Dispatcher.exe.mdb  Event.cs  Inst.cs  List.cs  MachineClient.cs  MachineServer.cs  Makefile  PMachine.cs  Scheduler.cs  pingpong_Macros.h  run.exe.mdb
playground/pingpong_java/: .gitignore  Dispatcher.java  MachineClient.java  MachineServer.java  Makefile  PMachine.java  Scheduler.java  pingpong_Macros.h
playground/pingpong_new/: Dispatcher.cs  MachineClient.cs  MachineServer.cs  MachineStarter.cs  PMachine.cs  ReceiveQueueItem.cs  Scheduler.cs  pingpong_Macros.h  run.exe.mdb
translator/: .gitignore  README.md  build.sh  requirements.txt  test.py
translator/PingPong/: MachineController.cs  MachinePING.cs  MachinePONG.cs  PingPong.csproj  PingPong.sln  ProjectConstants.cs
translator/elevator/ symbolic_csharp/: Dictionary.cs
translator/parser/java/: MANIFEST  PToLispFormatConverter.java  pBaseListener.java  pLexer.tokens  pListener.java  pParser.java
translator/pingpong/: MachinePING.cs  MachinePONG.cs  MachineStarter.cs  PMachine.cs  Scheduler.cs
translator/pparser/: Makefile  p.g4  pLexer.py  pParser.py  pVisitor.py  p_java_parser.py  p_program_parser.py  test.py
translator/pparser/java/: .gitignore  MANIFEST  PToSExpFormatConverter.java  pLexer.java  pLexer.tokens  pParser.java
translator/runtimes/basic_csharp/: DefaultArray.cs  List.cs  MonitorPMachine.cs  PBool.cs  PInteger.cs  PList.cs  PMachine.cs  Program.cs  Scheduler.cs  Tuples.cs  template.csproj.in
translator/runtimes/basic_csharp_runtime/: Extensions.cs  IPType.cs  Makefile  MonitorPMachine.cs  PBool.cs  PInteger.cs  PList.cs  PMachine.cs  Scheduler.cs  SendQueueItem.cs  Tuples.cs
translator/runtimes/multise_csharp/: BranchPoint.cs  CommandLineOptions.cs  Constants.cs  DefaultArray.cs  IPType.cs  LaceParallelExtension.cs  List.cs  MonitorPMachine.cs  PBool.cs  PInteger.cs  PList.cs  PMachine.cs  PMap.cs  PathConstraint.cs  Program.cs  RandomScheduler.cs  RoundRobinScheduler.cs  Scheduler.cs  SendQueueItem.cs  SymbolicBool.cs  SymbolicEngine.cs  SymbolicInteger.cs  Tuples.cs  VSSet.cs  ValueSummary.cs  log.txt  template.csproj.in  template.sln.in
translator/runtimes/multise_csharp/BDDToZ3Wrap/: BDDToZ3.cs  BDDToZ3Wrap.csproj  BDDToZ3Wrap.sln  BDD_Z3_Wrap.cxx  CMakeLists.txt
translator/runtimes/multise_csharp/BDDToZ3Wrap/Properties/: AssemblyInfo.cs
translator/runtimes/multise_csharp/BDDToZ3Wrap/TestBDDToZ3Wrap/: Program.cs  TestBDDToZ3Wrap.csproj
translator/runtimes/multise_csharp/BDDToZ3Wrap/TestBDDToZ3Wrap/Properties/: AssemblyInfo.cs
translator/runtimes/multise_csharp/MeddlyWrap/: .gitignore  CMakeLists.txt  MDD.cs  MeddlyWrap.csproj  MeddlyWrap.sln
translator/runtimes/multise_csharp/MeddlyWrap/Properties/: AssemblyInfo.cs
translator/runtimes/multise_csharp/MeddlyWrap/TestMeddlyWrap/: Program.cs  TestMeddlyWrap.csproj
translator/runtimes/multise_csharp/MeddlyWrap/TestMeddlyWrap/Properties/: AssemblyInfo.cs
translator/runtimes/multise_csharp/MeddlyWrap/wrapper/: CMakeLists.txt  wrapper.cxx
translator/runtimes/symbolic_csharp/: CommonMacros.h  Constants.cs  IPType.cs  List.cs  MonitorPMachine.cs  PBool.cs  PInteger.cs  PList.cs  PMachine.cs  PMap.cs  PathConstraint.cs  Program.cs  RandomScheduler.cs  RoundRobinScheduler.cs  SE.cs  Scheduler.cs  SendQueueItem.cs  SymbolicBool.cs  SymbolicEngine.cs  SymbolicInteger.cs  Tuples.cs  Z3Wrapper.cs  template.csproj.in
translator/scripts/: benchmark.py  build.py  generate_multise_runtime.py  regressions.py  translate.py
translator/tests/: Dummy2PC.p  LeaderElection.p  Multi_Paxos_3.p  demo.p  elevator.p  fib.p  german.p  include_test.p  slide.p  test.p  tokenring.p  tuple.p  two-machines.p  two-phase-commit.p
translator/tests/RegressionTests/Combined/Correct/variableType/: variableType.p
translator/tests/RegressionTests/Feature1SMLevelDecls/Correct/AlonBug/: AlonBug.p
translator/tests/RegressionTests/Feature1SMLevelDecls/Correct/BugRepro1/: FunctionParMutated.p
translator/tests/RegressionTests/Feature1SMLevelDecls/Correct/BugReproManyEvents/: BugReproManyEvents.p  CMain.p
translator/tests/RegressionTests/Feature1SMLevelDecls/Correct/DataPurity/: DataImpureFunction.p
translator/translator/: ast_to_pprogram.py  basic_csharp_translator.py  translator_base.py
translator/translators/: ast_to_pprogram.py  basic_csharp_translator.py  call_graph_annotator.py  multise_csharp_translator.py  symbolic_csharp_translator.py  translator_base.py  type_annotator.py
translator/translators/multise_csharp_translator/: __init__.py  multise_csharp_translator.py  valuesummary_translator.py
translator/translators/multise_csharp_translator/MultiSETransformer/: .gitignore  MultiSETransformer.csproj  MultiSETransformer.sln  Program.cs  ValueSummaryRewriter.cs
translator/translators/multise_csharp_translator/MultiSETransformer/Properties/: AssemblyInfo.cs
translator/two-phase-commit/: MachineClient.cs  MachineController.cs  MachineCoordinator.cs  MachineM.cs  MachineReplica.cs  MachineTimer.cs  MachineTwoPhaseCommit.cs  ProjectConstants.cs  packages.config  two-phase-commit.csproj  two-phase-commit.sln
translator/two-phase-commit/multise_csharp/: LaceParallelExtension.cs
(+191 files in other folders)
